--- a/app/views/layouts/cabinet.html.slim
+++ b/app/views/layouts/cabinet.html.slim
@@ -4,8 +4,9 @@ html
     title Nemesis - Trello reports
     = csrf_meta_tags
 
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'cabinet', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     = render 'shared/menu'
-    = yield
+    .container-fluid
+      = yield
