--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -22,9 +22,9 @@
           li
             a href="#"  Works
           li
-            a href="#"  News
+            a href="#"= current_user&.email
           li
-            a href="#"  Contact
+            = link_to 'Logout', destroy_user_session_path, method: :delete
           li
             a.btn.btn-default.btn-outline.btn-circle.collapsed aria-controls="nav-collapse4" aria-expanded="false" data-toggle="collapse" href="#nav-collapse4"
               | Profile
