rework with oauth

--- a/app/views/cabinet/settings/trellos/callback.html.slim
+++ b/app/views/cabinet/settings/trellos/callback.html.slim
@@ -2,4 +2,4 @@ coffee:
   # @FIX: fucking hack :(
   urls = document.location.toString().split("#");
   if urls.length > 1
-    document.location = "/cabinet/trellos/finishit/?#{urls[1]}"
+    #document.location = "/cabinet/trellos/finishit/?#{urls[1]}"
