trello oauth integration done, models annotated

--- a/app/views/cabinet/settings/index.html.slim
+++ b/app/views/cabinet/settings/index.html.slim
@@ -4,5 +4,5 @@ h1 Settings
   .label.label-success Trello connected
   / @TODO: disconnect
 - else
-  = link_to 'Connect with Trello', cabinet_settings_trellos_path
+  = link_to 'Connect with Trello', '/auth/trello'
 
