+ report - generator - board - lists

--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -14,9 +14,9 @@
       #navbar-collapse-4.collapse.navbar-collapse
         ul.nav.navbar-nav.navbar-right
           li
-            a href="#"  Home
+            a href="/cabinet"  Home
           li
-            a href="#"  About
+            = link_to 'Reports', cabinet_reports_path
           li
             a href="#"  Services
           li
