--- a/app/views/layouts/cabinet.html.slim
+++ b/app/views/layouts/cabinet.html.slim
@@ -8,5 +8,5 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     = render 'shared/menu'
-    .container-fluid
+    .container
       = yield
