cache boards and lists

--- a/app/views/cabinet/api/lists/_list.html.slim
+++ b/app/views/cabinet/api/lists/_list.html.slim
@@ -1,5 +1,5 @@
 ul
-  - board.lists.each do |list|
+  - lists.each do |list|
     li
       strong
         => check_box_tag 'report_lists[]', list.id, false, id: "report_list_#{list.id}", class: 'js_board_list', data: { name: list.name, id: list.id }
