--- a/app/views/cabinet/api/lists/index.js.erb
+++ b/app/views/cabinet/api/lists/index.js.erb
@@ -1,1 +1,1 @@
-$('#board_lists').html('<%= j render 'cabinet/api/lists/list', board: @board %>');
+$('#board_lists').html('<%= j render 'cabinet/api/lists/list', lists: @lists %>');
