show report’s score + new theme for cabinet

--- a/app/assets/stylesheets/cabinet.scss
+++ b/app/assets/stylesheets/cabinet.scss
@@ -1,4 +1,8 @@
 //= require shared/twb
 //= require devise_bootstrap_views
-//= require home/creative
 //= require cabinet/menu
+//= require cabinet/reports
+
+body{
+  margin-top: 60px;
+}
