--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -1,6 +1,6 @@
 / http://bootsnipp.com/snippets/GqgoX
 .container-fluid
-  nav.navbar.navbar-inverse
+  nav.navbar.navbar-inverse.navbar-fixed-top
     .container
       /! Brand and toggle get grouped for better mobile display
       .navbar-header
