--- a/app/views/cabinet/reports/edit.html.slim
+++ b/app/views/cabinet/reports/edit.html.slim
@@ -1,40 +1,52 @@
 h1 Construct report
 
 .row#reports_edit
-  .panel.panel-default.col-lg-4
-    = form_for [:cabinet, @report], class: 'form-horizontal' do |f|
-      .panel-body
+  .col-lg-4
+    .report
+      = form_for [:cabinet, @report], class: 'form-horizontal clearfix' do |f|
         .form-group
           = f.text_field :name, class: 'form-control', placeholder: "Report's name"
-      .panel-footer
-        .form-group
-          = f.submit 'Save', class: 'btn btn-default'
-.row
-  h3 Current generators
-  ul
-    - @report.items.each do |item|
-      li= item.generator_name
-.row
-  h3 Add generator
-  /= form_for [:cabinet, @report, @item], class: 'form-horizontal' do |f|
-  = form_for [:cabinet, @report], class: 'form-horizontal' do |f|
-    .form-group.col-lg-12
-      .col-lg-6
-        = select_tag 'report[items_attributes][][generator_id]', options_for_select(Generator.all.collect{|i| [i.name, i.id]}), class: 'form-control'
 
-    .form-group.col-lg-4
-      ul
-        - @boards.each do |board|
-          li
-            strong= link_to board.name, cabinet_api_lists_path(id: board.id), remote: true
-            small= board.description
+      table.table.table-striped
+        tr
+          th Current generators
+          th
+          th
+        - @report.items.each do |item|
+          tr
+            td= item.generator_name
+            td.pull-right= link_to 'Remove', '', class: 'btn btn-danger btn-xs'
+            td.pull-right= link_to 'Edit', '', class: 'btn btn-xs btn-primary'
 
-    .form-group.col-lg-4
-      #board_lists
+      table.table.table-striped
+        tr
+          th History
+          th
+          th
+        - @report.scores.order(created_at: :desc).each do |score|
+          tr
+            td= link_to l(score.created_at, format: :short), cabinet_score_path(score), target: '_blank'
 
-    .form-group.col-lg-4
-      = hidden_field_tag 'report[items_attributes][][lists]', '[]', id: 'report_list'
-      ul#report_list_items
+  .col-lg-8
+    /= form_for [:cabinet, @report, @item], class: 'form-horizontal' do |f|
+    = form_for [:cabinet, @report], class: 'form-horizontal' do |f|
+      .form-group.col-lg-12
+        .col-lg-6
+          = select_tag 'report[items_attributes][][generator_id]', options_for_select(Generator.all.collect{|i| [i.name, i.id]}), class: 'form-control'
 
-    .form-group.col-lg-12
-      = f.submit 'Add to report', class: 'btn btn-primary'
+      .form-group.col-lg-4
+        ul
+          - @boards.each do |board|
+            li
+              strong= link_to board.name, cabinet_api_lists_path(id: board.id), remote: true
+              small= board.description
+
+      .form-group.col-lg-4
+        #board_lists
+
+      .form-group.col-lg-4
+        = hidden_field_tag 'report[items_attributes][][lists]', '[]', id: 'report_list'
+        ul#report_list_items
+
+      .form-group.col-lg-12
+        = f.submit 'Add Generator', class: 'btn btn-success'
