--- a/app/views/cabinet/reports/scores/show.html.slim
+++ b/app/views/cabinet/reports/scores/show.html.slim
@@ -1,17 +1,25 @@
-h1 Report generate on #{l @score.created_at, format: :short}
+h1 Report generated on #{l @score.created_at, format: :short}
 
 - content = eval(@score.content)[0]
 /= content.inspect
+
 - content.each do |row|
-  h3= row[:name]
-  .row.clearfix
+  table.table.table-striped
+    tr
+      th colspan="2"
+        h4= row[:name]
+    tr
+      th Subject
+      th.col-lg-2.col-md-2.col-sm-4.col-sx-6
+        .pull-right Members
     - row[:cards].each do |card|
-        .panel.panel-default.col-lg-3.col-lg-offset-1
-          .panel-body
-            h6= link_to card[:name], card[:url]
-            small= card[:description]
-            hr
-            | Members:
-            ul
+      tr
+        td
+          div
+            = link_to card[:name], card[:url]
+          small
+            = card[:description]
+        td
+          .pull-right
             - card[:members].each do |member|
-              li= link_to member[:full_name], member[:url]
+              div= link_to member[:full_name], member[:url]
